--- a/TimerSystem/TimerSystem.csproj
+++ b/TimerSystem/TimerSystem.csproj
@@ -61,8 +61,12 @@
     </ApplicationDefinition>
     <Compile Include="Excel\Excel.cs" />
     <Compile Include="SerialCom\AutoDetectCom.cs" />
+    <Compile Include="SerialCom\ComPortEventArgs.cs" />
     <Compile Include="SerialCom\ComPortList.cs" />
-    <Compile Include="SerialCom\InputHandler.cs" />
+    <Compile Include="SerialCom\InputHandler.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="SerialCom\SerialTimerEventArgs.cs" />
     <Compile Include="Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
